--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "prisma": "^4.14.1"
+    "prisma": "^4.14.1",
+    "typescript": "5.0.4"
   }
 }
