--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # mongodb
-MONGODB_URI=
-MONGODB_DB=
+MONGODB_URL=mongodb+srv://root:nextjs-mui-kit-secret@localhost/nextjs-mui-kit-prod?retryWrites=true&w=majority
+MONGODB_DB=nextjs-mui-kit-prod
