--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@mui/material": "5.11.10",
     "@mui/system": "5.11.9",
     "@mui/x-date-pickers": "5.0.19",
+    "@prisma/client": "4.14.1",
     "apexcharts": "3.37.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bson": "^5.3.0",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
