--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 # mongodb
 MONGODB_URL=mongodb+srv://root:nextjs-mui-kit-secret@localhost/nextjs-mui-kit-prod?retryWrites=true&w=majority
 MONGODB_DB=nextjs-mui-kit-prod
+
+NEXTAUTH_URL=http://nextjs-mui-kit.vercel.app
