--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@prisma/client": "4.14.1",
     "apexcharts": "3.37.0",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bson": "^5.3.0",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
@@ -49,6 +49,7 @@
     "next-api-decorators": "^2.0.2",
     "next-auth": "^4.22.1",
     "next-shield": "^2.1.3",
+    "nodemailer": "^6.9.3",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -61,6 +62,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.13.0",
     "@types/nprogress": "0.2.0",
     "@types/numeral": "2.0.2",
