--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/system": "5.11.9",
     "@mui/x-date-pickers": "5.0.19",
     "@prisma/client": "4.14.1",
+    "@storyofams/next-api-decorators": "^1.8.2",
     "apexcharts": "3.37.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
