--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # mongodb
-MONGODB_URL=mongodb+srv://root:nextjs-mui-kit-secret@localhost/nextjs-mui-kit-prod?retryWrites=true&w=majority
-MONGODB_DB=nextjs-mui-kit-prod
+MONGODB_URL=mongodb+srv://root:material-kit-nextjs-secret@localhost/material-kit-nextjs?retryWrites=true&w=majority
+MONGODB_DB=material-kit-nextjs
 
 NEXTAUTH_URL=http://nextjs-mui-kit.vercel.app
+JWT_SECRET=material-kit-nextjs-secret
