--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "jsx": "preserve",
     "paths": {
       "@/*": ["./src/*"]
